updated spacing issues

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html, body {
   background-repeat: no-repeat;
   background-position: center;
   margin: 15px;
-  height: 100%;
+  min-height: 400px;
 }
 
 #sidebar {
@@ -67,11 +67,23 @@ html, body {
   background: white;
 }
 
+#heatcard {
+  margin-left: 24px;
+}
+
+#KKcard{
+  margin-left: 24px;
+}
+
+#table {
+  display: none;
+}
+
 #timer {
   color: rgb(45, 180, 56);
   background: white;
   max-width: 90%;
-  max-height: 14%;
+  /* max-height: 14%; */
   border: 3px solid black;
 }
 
@@ -100,25 +112,26 @@ html, body {
   border-top: none;
 }
 
-@media screen and (max-width: 1024px){
-  #penguin{
+@media (max-width: 1024px) {
+  #penguin {
     display: inline-block;
-    margin:auto;
+    margin: auto;
   }
-
 }
-@media screen and (max-width: 992px) {
+
+@media (max-width: 992px) {
   #fullsite {
     overflow-y: scroll;
   }
   #mainscroll {
-    overflow-y: auto
+    overflow-y: none;
   }
   #timer {
     display: block center;
   }
   #aboutme {
-    text-align: center
+    text-align: center;
+    display: none;
   }
   #mainscroll #santa {
     position: relative;
@@ -126,6 +139,28 @@ html, body {
     background-repeat: no-repeat;
     background-position-x: 2rem;
   }
+  #table {
+    display: table;
+    margin: 6px;
+  }
 }
 
-/* style="font-size: .98rem" */
+@media (max-width:766px) {
+  #santa {
+    min-height: 354px;
+  }
+}
+
+@media (max-width:525px) {
+  #santa {
+    min-height: 298px;
+  }
+  #heatcard, #KKcard {
+    margin-left: -3px;
+    margin-top: 15px;
+  }
+}
+
+/* @media (min-width:400px){
+
+} */
